picture element fix on small and medium viewport

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -165,7 +165,7 @@ main {
 }
 
 main div {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 1rem;
     background-color: var(--secondary-color);
     color: var(--third-color);
@@ -176,6 +176,10 @@ main div {
     padding: 0;
     position: relative;
     /* height: 30vh; keep the herobanner in certain size for viewport */
+}
+
+.herobanner picture {
+    display: grid;
 }
 
 .herobanner picture img {
@@ -200,8 +204,6 @@ main div {
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     width: 50%;
-    /* margin-top: 20%; */
-    /* margin-left: 50%; */
     text-align: center;
     font-weight: bold;
 }
